--- a/app/src/main/res/drawable/navigation_bar.xml
+++ b/app/src/main/res/drawable/navigation_bar.xml
@@ -6,6 +6,6 @@
   <path
       android:pathData="M86,38c88.9,-6.9 175.6,-12.2 264,-16 21.2,-0.9 51.4,-1.8 72,18 26.9,25.9 11.2,63 36,90 32.3,35.2 111.7,35.2 144,0 24.8,-27 9.1,-64.1 36,-90 20.6,-19.8 50.8,-18.9 72,-18 88.4,3.8 175.1,9.1 264,16a80,80 0,0 1,80 80v84a80,80 0,0 1,-80 80L86,282a80,80 0,0 1,-80 -80L6,118A80,80 0,0 1,86 38Z"
       android:strokeWidth="0"
-      android:fillColor="#fff"
+      android:fillColor="#292929"
       android:fillType="evenOdd" />
 </vector>
